--- a/package.json
+++ b/package.json
@@ -14,7 +14,5 @@
     "react-icons": "^4.2.0",
     "styled-components": "^5.2.1"
   },
-  "devDependencies": {
-    "babel-plugin-inline-react-svg": "^1.1.2"
-  }
+  "devDependencies": {}
 }
